# image_processing

./: README.md  pyproject.toml
homework/: Bit-PlaneSlicing.py  NegativeImage.py  SaltPepper.py  edge_detection.py  gama_transformation.py  log_transformation.py  text_recognation.py
